<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="새 커핑 주최하기"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/previousImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="60dp"
            android:backgroundTint="@color/content_background"
            android:src="@drawable/ic_back_arrow_white_24"
            app:layout_constraintEnd_toStartOf="@+id/welcomeText"
            app:layout_constraintTop_toTopOf="@+id/welcomeText"
            app:layout_constraintBottom_toBottomOf="@+id/welcomeText"/>


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_title"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/coffeeing_title_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />


        <TextView
            android:id="@+id/placeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_place"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEdit" />

        <EditText
            android:id="@+id/placeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/coffeeing_place_value"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeText" />


        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_time"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeEdit" />

        <EditText
            android:id="@+id/timeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/coffeeing_time_value"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeText" />


        <TextView
            android:id="@+id/recruitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_recruit"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeEdit" />

        <EditText
            android:id="@+id/recruitEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/coffeeing_recruit_value"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/peopleNumber"
            app:layout_constraintTop_toBottomOf="@id/recruitText"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintWidth_max="100dp" />

        <TextView
            android:id="@+id/peopleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="명"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/recruitEdit"
            app:layout_constraintTop_toTopOf="@id/recruitEdit"
            app:layout_constraintBottom_toBottomOf="@id/recruitEdit" />

        <TextView
            android:id="@+id/deadlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_deadline"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recruitEdit" />

        <EditText
            android:id="@+id/deadlineEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:hint="@string/coffeeing_deadline_value"
            android:focusable="false"
            android:clickable="true"
            android:onClick="showDatePickerDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadlineText" />

        <android.widget.Button
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_calendar_maincolor_24"
            android:onClick="showDatePickerDialog"
            app:layout_constraintStart_toEndOf="@id/deadlineEdit"
            app:layout_constraintTop_toTopOf="@id/deadlineEdit"
            />


        <TextView
            android:id="@+id/categoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_category"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadlineEdit" />

        <GridLayout
            android:id="@+id/categoryButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryText">
            <ToggleButton
                android:id="@+id/toggle1"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textOn="@string/coffeeing_category1"
                android:textOff="@string/coffeeing_category1"
                android:textColor="@color/point_1"
                android:background="@drawable/button_selector"
                android:layout_column="0"
                android:layout_row="0" />
            <ToggleButton
                android:id="@+id/toggle2"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textOn="@string/coffeeing_category2"
                android:textOff="@string/coffeeing_category2"
                android:textColor="@color/point_1"
                android:background="@drawable/button_selector"
                android:layout_column="1"
                android:layout_row="0" />
            <ToggleButton
                android:id="@+id/toggle3"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textOn="@string/coffeeing_category3"
                android:textOff="@string/coffeeing_category3"
                android:textColor="@color/point_1"
                android:background="@drawable/button_selector"
                android:layout_column="2"
                android:layout_row="0" />
            <ToggleButton
                android:id="@+id/toggle4"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textOn="@string/coffeeing_category4"
                android:textOff="@string/coffeeing_category4"
                android:textColor="@color/point_1"
                android:background="@drawable/button_selector"
                android:layout_column="0"
                android:layout_row="1" />
            <ToggleButton
                android:id="@+id/toggle5"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textOn="@string/coffeeing_category5"
                android:textOff="@string/coffeeing_category5"
                android:textColor="@color/point_1"
                android:background="@drawable/button_selector"
                android:layout_column="1"
                android:layout_row="1" />
        </GridLayout>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/coffeeing_description"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryButton" />

        <ScrollView
            android:id="@+id/descriptionEdit"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollbarSize="10dp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:hint="@string/coffeeing_dummyString"
                android:padding="20dp"/>

        </ScrollView>

        <android.widget.Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/coffeeing_submit"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_background"
            app:layout_constraintTop_toBottomOf="@id/descriptionEdit"
            app:layout_constraintBottom_toBottomOf="parent"  />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>