<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.coffeeing.client.presentation.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.home.HomeActivity">

        <ImageView
            android:id="@+id/iv_home_coffeeing_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="39dp"
            android:src="@drawable/coffeeing_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_home_my_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/my_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_home_line_top"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="29dp"
            android:background="@color/point_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_home_coffeeing_logo" />

        <HorizontalScrollView
            android:id="@+id/sv_home_coffeeing_type_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing24"
            android:layout_marginTop="22dp"
            android:clipToPadding="false"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_home_line_top">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_home_coffeeing_type_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:chipSpacing="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
                app:singleLine="true"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    style="@style/Style.Material3.Chip.Coffeeing.Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:text="@string/coffeeing_type_barista_original"
                    android:textSize="7dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Style.Material3.Chip.Coffeeing.Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:text="@string/coffeeing_type_local_area"
                    android:textSize="7dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Style.Material3.Chip.Coffeeing.Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:text="@string/coffeeing_type_hot_place"
                    android:textSize="7dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Style.Material3.Chip.Coffeeing.Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:text="@string/coffeeing_type_professional"
                    android:textSize="7dp" />

                <com.google.android.material.chip.Chip
                    style="@style/Style.Material3.Chip.Coffeeing.Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:text="@string/coffeeing_type_beginner"
                    android:textSize="7dp" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <EditText
            android:id="@+id/et_home_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/point_1"
            android:fontFamily="@font/notosanskr_medium"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/spacing10"
            android:paddingVertical="@dimen/spacing10"
            android:textColor="@color/point_1"
            android:textSize="9dp"
            app:layout_constraintEnd_toStartOf="@id/layout_home_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_home_coffeeing_type_filter" />

        <ImageView
            android:id="@+id/iv_home_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_home_search"
            app:layout_constraintEnd_toEndOf="@+id/et_home_search"
            app:layout_constraintTop_toTopOf="@id/et_home_search" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:background="@drawable/rect_point_1_stroke_radius_15"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_home_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_home_search">

            <TextView
                android:id="@+id/tv_home_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_bold"
                android:textColor="@color/point_1"
                android:textSize="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="최신순" />

            <ImageView
                android:id="@+id/iv_home_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:src="@drawable/ic_home_dropdown"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_sort"
                app:layout_constraintStart_toEndOf="@+id/tv_home_sort"
                app:layout_constraintTop_toTopOf="@+id/tv_home_sort" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_coffeeing"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="19dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_home_search"
            tools:listitem="@layout/item_home_coffeeing" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/rv_home_coffeeing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_home_search">

            <ImageView
                android:id="@+id/iv_home_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coffeeing_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/notosanskr_bold"
                android:text="@string/home_empty"
                android:textColor="@color/empty"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_home_empty" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_home_add_coffeeing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rect_point_1_radius_15"
            android:elevation="@dimen/spacing4"
            android:fontFamily="@font/notosanskr_bold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/home_add_coffeeing"
            android:textColor="@color/point_3"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>