<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border_top_radius_15"
        android:backgroundTint="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_sort_recent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_home_sort_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:text="@string/home_sort_recent"
                android:textColor="@color/selector_coffeeing_sort"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_home_sort_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_sort_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="@+id/layout_home_sort_recent"
            app:layout_constraintStart_toStartOf="@+id/layout_home_sort_recent"
            app:layout_constraintTop_toBottomOf="@id/layout_home_sort_recent">

            <TextView
                android:id="@+id/tv_home_sort_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:text="@string/home_sort_popularity"
                android:textColor="@color/selector_coffeeing_sort"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_home_sort_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_sort_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing24"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layout_home_sort_popularity"
            app:layout_constraintStart_toStartOf="@+id/layout_home_sort_popularity"
            app:layout_constraintTop_toBottomOf="@+id/layout_home_sort_popularity">

            <TextView
                android:id="@+id/tv_home_sort_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:text="@string/home_sort_deadline"
                android:textColor="@color/selector_coffeeing_sort"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_home_sort_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>